Enable stopping and restarting activities

--- a/webapp/src/main/webapp/index.html
+++ b/webapp/src/main/webapp/index.html
@@ -3,4 +3,7 @@
     <table id="active">
         <lift:tic.active/>
     </table>
+    <table id="inactive">
+        <lift:tic.inactive/>
+    </table>
 </lift:surround>
