--- a/selenium/enter_and_rename.html
+++ b/selenium/enter_and_rename.html
@@ -4,12 +4,12 @@
 <head profile="http://selenium-ide.openqa.org/profiles/test-case">
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 <link rel="selenium.base" href="" />
-<title>enter and rename</title>
+<title>enter_and_rename</title>
 </head>
 <body>
 <table cellpadding="1" cellspacing="1" border="1">
 <thead>
-<tr><td rowspan="1" colspan="3">enter and rename</td></tr>
+<tr><td rowspan="1" colspan="3">enter_and_rename</td></tr>
 </thead><tbody>
 <tr>
 	<td>open</td>
@@ -68,7 +68,7 @@
 </tr>
 <tr>
 	<td>click</td>
-	<td>//tr/td[3]</td>
+	<td>//tr/td[4]</td>
 	<td></td>
 </tr>
 <tr>
@@ -88,13 +88,8 @@
 </tr>
 <tr>
 	<td>waitForText</td>
-	<td>//tr/td[3]</td>
+	<td>//tr/td[4]</td>
 	<td>15 minutes</td>
-</tr>
-<tr>
-	<td>click</td>
-	<td>link=Delete</td>
-	<td></td>
 </tr>
 <tr>
 	<td>click</td>
